@@ -17,16 +17,16 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() +/* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() +/* language=kotlin */ """
                 dependencies {
                     annotationProcessor("org.projectlombok:lombok:1.18.38")
                     compileOnly("org.projectlombok:lombok:1.18.38")
                     runtimeOnly("com.google.inject:guice:5.1.0") // This is an older version of Guice that should get upgraded
                 }
                 configurations.getByName("compileClasspath").shouldResolveConsistentlyWith(configurations.getByName("runtimeClasspath"))
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
         ith.mkDirInProjectDir("src/main/java/com/example/plugin");
-        Files.write(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
+        Files.writeString(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
                 package com.example.plugin;
                 import lombok.*;
                 import hudson.Extension;
@@ -44,7 +44,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                     public String getDisplayName() { return "Example plugin"; }
                     public String getIconFileName() { return null; }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
@@ -68,7 +68,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() +/* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() +/* language=kotlin */ """
                 dependencies {
                     annotationProcessor("org.projectlombok:lombok:1.18.38")
                     compileOnly("org.projectlombok:lombok:1.18.38")
@@ -76,9 +76,9 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                     implementation("com.fasterxml.jackson.core:jackson-databind:2.19.0") // This is a jar dependency that should not be included in the JPI
                 }
                 configurations.getByName("compileClasspath").shouldResolveConsistentlyWith(configurations.getByName("runtimeClasspath"))
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
         ith.mkDirInProjectDir("src/main/java/com/example/plugin");
-        Files.write(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
+        Files.writeString(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
                 package com.example.plugin;
                 import lombok.*;
                 import hudson.Extension;
@@ -96,7 +96,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                     public String getDisplayName() { return "Example plugin"; }
                     public String getIconFileName() { return null; }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
@@ -120,7 +120,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() +/* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() +/* language=kotlin */ """
                 dependencies {
                     annotationProcessor("org.projectlombok:lombok:1.18.38")
                     compileOnly("org.projectlombok:lombok:1.18.38")
@@ -128,9 +128,9 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                     implementation("com.auth0:java-jwt:4.5.0") // This also depends on jackson-databind. We should include this jar, but not jackson-databind in the WEB-INF/lib dir.
                 }
                 configurations.getByName("compileClasspath").shouldResolveConsistentlyWith(configurations.getByName("runtimeClasspath"))
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
         ith.mkDirInProjectDir("src/main/java/com/example/plugin");
-        Files.write(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
+        Files.writeString(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
                 package com.example.plugin;
                 import lombok.*;
                 import hudson.Extension;
@@ -148,7 +148,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                     public String getDisplayName() { return "Example plugin"; }
                     public String getIconFileName() { return null; }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
@@ -172,13 +172,13 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() + /* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() + /* language=kotlin */ """
                 dependencies {
                     implementation("org.jenkins-ci.plugins:git:5.7.0")
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
         ith.mkDirInProjectDir("src/main/java/com/example/plugin");
-        Files.write(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
+        Files.writeString(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
                 package com.example.plugin;
                 import hudson.plugins.git.Branch;
                 public class PluginAction {
@@ -188,7 +188,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                         this.name = name;
                     }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
@@ -212,14 +212,14 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() +/* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() +/* language=kotlin */ """
                 dependencies {
                     annotationProcessor("org.projectlombok:lombok:1.18.38")
                     compileOnly("org.projectlombok:lombok:1.18.38")
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
         ith.mkDirInProjectDir("src/main/java/com/example/plugin");
-        Files.write(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
+        Files.writeString(ith.inProjectDir("src/main/java/com/example/plugin/PluginAction.java").toPath(), /* language=java */ """
                 package com.example.plugin;
                 import lombok.*;
                 import hudson.Extension;
@@ -237,7 +237,7 @@ class DependencyFilteringIntegrationTest extends V2IntegrationTestBase {
                     public String getDisplayName() { return "Example plugin"; }
                     public String getIconFileName() { return null; }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
