@@ -25,7 +25,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
     void manifestContainsVersionWhenUsingForce() throws IOException {
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() + /* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() + /* language=kotlin */ """
                 configurations.configureEach {
                     resolutionStrategy {
                         force("org.jenkins-ci.plugins:git:5.7.0")
@@ -34,7 +34,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
                 dependencies {
                     implementation("org.jenkins-ci.plugins:git")
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
 
         GradleRunner gradleRunner = ith.gradleRunner();
 
@@ -51,7 +51,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
         ith.mkDirInProjectDir("src-repo/com/example/bom/bom/1.0.0");
-        Files.write(ith.inProjectDir("src-repo/com/example/bom/bom/1.0.0/bom-1.0.0.pom").toPath(), /* language=xml */ """
+        Files.writeString(ith.inProjectDir("src-repo/com/example/bom/bom/1.0.0/bom-1.0.0.pom").toPath(), /* language=xml */ """
                 <project xmlns="http://maven.apache.org/POM/4.0.0"
                         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -70,8 +70,8 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
                         </dependencies>
                     </dependencyManagement>
                 </project>
-                """.getBytes(StandardCharsets.UTF_8));
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() + /* language=kotlin */ """
+                """);
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() + /* language=kotlin */ """
                 repositories {
                     maven {
                         url = uri("${rootDir}/src-repo")
@@ -81,7 +81,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
                     implementation(platform("com.example.bom:bom:1.0.0"))
                     api("org.jenkins-ci.plugins:git")
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
 
         GradleRunner gradleRunner = ith.gradleRunner();
 
@@ -115,7 +115,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
     void supportDynamicLoadingDefaultsToTrueWhenNoExtensionsExist() throws IOException {
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig().getBytes(StandardCharsets.UTF_8));
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig());
 
         ith.gradleRunner().withArguments("build").build();
 
@@ -126,7 +126,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
     void supportDynamicLoadingIsTrueWhenAllExtensionsAreYes() throws IOException {
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig().getBytes(StandardCharsets.UTF_8));
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig());
         writeJavaSource(ith, "com/example/plugin/AlwaysReloadable.java", """
                 package com.example.plugin;
 
@@ -144,7 +144,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
     void supportDynamicLoadingIsOmittedWhenAnyExtensionIsMaybe() throws IOException {
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig().getBytes(StandardCharsets.UTF_8));
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig());
         writeJavaSource(ith, "com/example/plugin/MaybeReloadable.java", """
                 package com.example.plugin;
 
@@ -169,7 +169,7 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
     void supportDynamicLoadingIsFalseWhenAnyExtensionIsNotDynamicLoadable() throws IOException {
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig().getBytes(StandardCharsets.UTF_8));
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig());
         writeJavaSource(ith, "com/example/plugin/NeverReloadable.java", """
                 package com.example.plugin;
 
@@ -199,6 +199,6 @@ class ManifestIntegrationTest extends V2IntegrationTestBase {
     private static void writeJavaSource(IntegrationTestHelper ith, String relativePath, String source) throws IOException {
         var parent = relativePath.substring(0, relativePath.lastIndexOf('/'));
         ith.mkDirInProjectDir("src/main/java/" + parent);
-        Files.write(ith.inProjectDir("src/main/java/" + relativePath).toPath(), source.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(ith.inProjectDir("src/main/java/" + relativePath).toPath(), source);
     }
 }
