@@ -24,12 +24,12 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() + /* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() + /* language=kotlin */ """
                 dependencies {
                     api("org.jenkins-ci.plugins:jackson2-api:2.18.3-402.v74c4eb_f122b_2")
                     implementation("com.github.rahulsom:nothing-java:0.2.0")
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
@@ -93,7 +93,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() + /* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() + /* language=kotlin */ """
                 publishing {
                     publications.withType<MavenPublication>().configureEach {
                         pom {
@@ -106,7 +106,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
                         }
                     }
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         ith.gradleRunner().withArguments("publish").build();
@@ -128,7 +128,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle").toPath(), /* language=groovy */ """
+        Files.writeString(ith.inProjectDir("build.gradle").toPath(), /* language=groovy */ """
                 plugins {
                     id "org.jenkins-ci.jpi2"
                 }
@@ -146,7 +146,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
                         }
                     }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
@@ -181,13 +181,13 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (PUBLISH_TO_JENKINS_IMPORT + getBasePluginConfig() + /* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), PUBLISH_TO_JENKINS_IMPORT + getBasePluginConfig() + /* language=kotlin */ """
                 publishing {
                     repositories {
                         publishToJenkins()
                     }
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var result = ith.gradleRunner().withArguments(
@@ -202,7 +202,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (PUBLISH_TO_JENKINS_IMPORT + String.format(/* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), PUBLISH_TO_JENKINS_IMPORT + String.format(/* language=kotlin */ """
                 plugins {
                     id("org.jenkins-ci.jpi2")
                 }
@@ -227,8 +227,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
                         }
                     }
                 }
-                """, RandomPortProvider.findFreePort(), RandomPortProvider.findFreePort()))
-                .getBytes(StandardCharsets.UTF_8));
+                """, RandomPortProvider.findFreePort(), RandomPortProvider.findFreePort()));
 
         // when
         var result = ith.gradleRunner().withArguments(
@@ -244,7 +243,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (PUBLISH_TO_JENKINS_IMPORT + String.format(/* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), PUBLISH_TO_JENKINS_IMPORT + String.format(/* language=kotlin */ """
                 plugins {
                     id("org.jenkins-ci.jpi2")
                 }
@@ -269,8 +268,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
                         }
                     }
                 }
-                """, RandomPortProvider.findFreePort(), RandomPortProvider.findFreePort()))
-                .getBytes(StandardCharsets.UTF_8));
+                """, RandomPortProvider.findFreePort(), RandomPortProvider.findFreePort()));
 
         // when
         var result = ith.gradleRunner().withArguments(
@@ -286,7 +284,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle").toPath(), /* language=groovy */ """
+        Files.writeString(ith.inProjectDir("build.gradle").toPath(), /* language=groovy */ """
                 plugins {
                     id "org.jenkins-ci.jpi2"
                 }
@@ -305,7 +303,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
                         }
                     }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var result = ith.gradleRunner().withArguments(
@@ -320,14 +318,14 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
         // given
         var ith = new IntegrationTestHelper(tempDir, "8.14");
         initBuild(ith);
-        Files.write(ith.inProjectDir("build.gradle.kts").toPath(), (getBasePluginConfig() + /* language=kotlin */ """
+        Files.writeString(ith.inProjectDir("build.gradle.kts").toPath(), getBasePluginConfig() + /* language=kotlin */ """
                 dependencies {
                     implementation("org.jenkins-ci.plugins:jackson2-api:2.18.3-402.v74c4eb_f122b_2")
                 }
-                """).getBytes(StandardCharsets.UTF_8));
+                """);
 
         ith.mkDirInProjectDir("src/main/java/com/example/plugin");
-        Files.write(ith.inProjectDir("src/main/java/com/example/plugin/Plugin.java").toPath(), /* language=java */ """
+        Files.writeString(ith.inProjectDir("src/main/java/com/example/plugin/Plugin.java").toPath(), /* language=java */ """
                 package com.example.plugin;
                 import com.fasterxml.jackson.databind.ObjectMapper;
                 public class Plugin {
@@ -335,7 +333,7 @@ class PublishingIntegrationTest extends V2IntegrationTestBase {
                         var o = new ObjectMapper();
                     }
                 }
-                """.getBytes(StandardCharsets.UTF_8));
+                """);
 
         // when
         var gradleRunner = ith.gradleRunner();
